--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -1,8 +1,20 @@
-<nav>
-  <ul>
+<nav class="flex items-center justify-between bg-blue-600 p-4 text-white">
+  <div class="font-bold">HeatMap-app</div>
+    <ul class="flex gap-4">
     <li><a routerLink="/mapa">Mapa</a></li>
     <li><a routerLink="/dashboard">Dashboard</a></li>
     <li><a routerLink="/ocorrencias">Ocorrências</a></li>
+     <li>
+         @if(auth.isLoggedIn()){
+         <button (click)="auth.logout()" class="bg-red-500 px-3 py-1 rounded hover:bg-red-600">
+             Logout
+         </button>
+         } @else {
+             <a routerLink="/login" class="bg-green-500 px-3 py-1 rounded hover:bg-green-600">
+                 Login
+                </a>
+         }
+     </li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
