--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -1,7 +1,7 @@
 <z-layout class="h-screen w-full">
-  <z-sidebar [zWidth]="256" class="!bg-gray-50 !h-full !p-0 custom-sidebar">
-    <div class="h-full flex flex-col">
-      <div class="px-4 h-[75px] flex items-center flex-shrink-0">
+  <z-sidebar [zWidth]="256" class="!h-full !p-0 custom-sidebar">
+    <div class="h-full flex flex-col gap-[1px]">
+      <div class="px-4 h-[75px] flex items-center flex-shrink-0 bg-white rounded-br-lg">
         <div class="flex items-center gap-3">
           <div class="w-10 h-10 rounded-lg bg-[#135ce4] text-white flex items-center justify-center flex-shrink-0">
             <z-icon zType="file-text" class="text-xl"></z-icon>
@@ -10,7 +10,17 @@
         </div>
       </div>
 
-      <div class="flex-1 overflow-auto px-4 py-4 min-h-0">
+      <div class="px-4 py-4 flex-shrink-0 bg-white rounded-tr-lg rounded-br-lg">
+        @if (auth.isLoggedIn()) {
+        <z-user-menu></z-user-menu>
+        } @else {
+        <a routerLink="/login" z-button zType="default" zSize="sm" class="w-full justify-center">
+          Entrar
+        </a>
+        }
+      </div>
+
+      <div class="flex-1 overflow-auto px-4 py-4 min-h-0 bg-white rounded-tr-lg">
         <z-sidebar-group>
           <a routerLink="/dashboard" routerLinkActive="active"
             class="flex items-center gap-3 px-4 py-3 rounded-lg text-slate-900 no-underline text-sm font-medium transition-all duration-200 cursor-pointer hover:bg-gray-100 active:bg-slate-900 active:text-white">
@@ -39,21 +49,11 @@
           </a>
         </z-sidebar-group>
       </div>
-
-      <div class="px-4 py-4 border-t border-gray-200 flex-shrink-0">
-        @if (auth.isLoggedIn()) {
-        <z-user-menu></z-user-menu>
-        } @else {
-        <a routerLink="/login" z-button zType="default" zSize="sm" class="w-full justify-center">
-          Entrar
-        </a>
-        }
-      </div>
     </div>
   </z-sidebar>
 
-  <div class="flex flex-col flex-1 min-w-0 overflow-hidden">
-    <z-header [zHeight]="75" class="!bg-gray-50 custom-header">
+  <div class="flex flex-col flex-1 min-w-0 overflow-hidden gap-[1px]">
+    <z-header [zHeight]="75" class="!bg-white custom-header rounded-bl-lg">
       <div class="flex items-center justify-between px-4 w-full h-full">
         <div class="flex items-center gap-3 h-full">
           <h1 class="text-lg font-semibold text-slate-900 m-0">
@@ -72,8 +72,8 @@
       </div>
     </z-header>
 
-    <z-content class="!bg-white !min-h-0 flex-1 overflow-hidden !p-0">
-      <div class="h-full w-full max-w-[1400px] border border-gray-200 rounded-tl-lg overflow-hidden">
+    <z-content class="!bg-white !min-h-0 flex-1 overflow-hidden !p-0 rounded-tl-lg">
+      <div class="h-full w-full max-w-[1400px] rounded-tl-lg overflow-hidden">
         <div class="h-full overflow-auto">
           <div class="p-6">
             <router-outlet></router-outlet>
