--- a/Frontend/src/app/app.css
+++ b/Frontend/src/app/app.css
@@ -8,15 +8,15 @@
 :host ::ng-deep z-sidebar a.active,
 :host ::ng-deep z-sidebar-group a.active,
 :host ::ng-deep z-sidebar.custom-sidebar a.active {
-  background-color: hsl(222.2 47.4% 11.2%) !important;
-  color: hsl(0 0% 100%) !important;
+  background-color: rgba(19, 92, 228, 0.1) !important;
+  color: #135ce4 !important;
 }
 
 :host ::ng-deep z-sidebar a.active:hover,
 :host ::ng-deep z-sidebar-group a.active:hover,
 :host ::ng-deep z-sidebar.custom-sidebar a.active:hover {
-  background-color: hsl(222.2 47.4% 11.2%) !important;
-  color: hsl(0 0% 100%) !important;
+  background-color: rgba(19, 92, 228, 0.15) !important;
+  color: #135ce4 !important;
 }
 
 :host ::ng-deep z-layout {
