--- a/Frontend/src/app/app.css
+++ b/Frontend/src/app/app.css
@@ -99,3 +99,10 @@
   max-width: 1400px;
   margin: 0 auto;
 }
+
+:host ::ng-deep z-content.auth-page router-outlet + * {
+  max-width: 100%;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
